--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,25 @@
 </head>
 <body>
 
-<%= link_to "Sign Up", new_user_url%>
-<%= link_to "Sign In", new_session_url%>
-<%if current_user%>
+<% if !current_user %>
+  <%= link_to "Sign Up", new_user_url%>
+  <%= link_to "Sign In", new_session_url%>
+<% else %>
+  <h4>Welcome, <%= current_user.email%></h4>
+  <%= button_to "Log Out", session_url, method: :delete %>
+  <br>
   <%= link_to "Create Circle", new_user_circle_url(current_user)%>
   <%= link_to "Create Post", new_user_post_url(current_user)%>
+  <br><br>
 <%end%>
+
 <% unless flash[:errors].nil? %>
   <%flash[:errors].each do |flash|%>
     <%= flash%>
   <%end%>
 <%end%>
 
-<% unless current_user.nil? %>
-  <%= current_user.email%>
-  <%= button_to "Log Out", session_url, method: :delete %>
-<% end %>
+
 
 <%= yield %>
 
