finish all post and circle views and links navigating between them

--- a/app/views/circles/index.html.erb
+++ b/app/views/circles/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 	<% @user.circles.each do |circle| %>
-		<li><%= circle.title %></li>
+		<li><%= link_to circle.title, circle_url(circle) %></li>
 	<% end %>
 </ul>
 
